# python-atoz

./: pyproject.toml
python_atoz/ds_and_algo/: merge_strings_alternatively.py
python_atoz/ds_and_algo/algo/leap_year/: leap_year.py
python_atoz/ds_and_algo/algo/prime_number/: prime.py
python_atoz/ds_and_algo/algo/recursion/: fibo.py  string_reverse.py
python_atoz/ds_and_algo/algo/sorting/merge_sort/: merge_sort.py  merge_sort_final.py
python_atoz/ds_and_algo/two_pointer/: is_palindrome.py
python_atoz/spark_ex/: wc.py
