[tool.poetry]
name = "python-atoz"
version = "0.1.0"
description = ""
authors = ["VijayRamisetty <ramisetty.v@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
